# chipseq-singlecell-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: cleanup-jobs.md  docker-build.md  docker-test.md  monitor-jobs.md  submit-chipseq.md  submit-singlecell.md  submit-tunnel.md  validate-bash.md
.claude/commands/openspec/: apply.md  archive.md  proposal.md
.claude/skills/: runai.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  validate-bash-scripts.yml
.openspec/: README.md
.openspec/approved/: add-runai-skill-and-commands-tasks.md  add-runai-skill-and-commands.md
.openspec/archived/: add-runai-skill-and-commands.md  remove-scvi-tools.md
.openspec/proposals/: remove-scvi-tools-tasks.md  remove-scvi-tools.md
docs/: MANUAL_RUNAI_EXECUTION.md  RUNAI_QUICK_REFERENCE.md
scripts/: cleanup-runai.sh  entrypoint.sh  monitor-runai-jobs.sh
scripts/chipseq/: ChIProfiler_M00_Basic.sh  ChIProfiler_M01_Stat_PE.sh  ChIProfiler_M03_CallPeaks.sh
